[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "*", features = ["full"] }
tokio-util = { version = "*", features = ["codec"] }
futures-util = { version = "*", features = ["sink"] }
plugins = { path = "../plugins" }
messaging = { path = "../messaging" }
